--- a/templates/python-deploy.yaml
+++ b/templates/python-deploy.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.metadata.name}}
+  name: {{ .Values.deploy.metadata.name}}
 spec:
   selector:
     matchLabels:
-      name: {{ .Values.selector.matchLabels.name}}
-      app: {{ .Values.selector.matchLabels.app}}
+      name: {{ .Values.deploy.selector.matchLabels.name}}
+      app: {{ .Values.deploy.selector.matchLabels.app}}
   template:
     metadata:
       labels:
-        name: {{ .Values.template.metadata.labels.name}}
-        app: {{ .Values.template.metadata.labels.app}}
+        name: {{ .Values.deploy.template.metadata.labels.name}}
+        app: {{ .Values.deploy.template.metadata.labels.app}}
     spec:
       containers:
-      - name: {{ .Values.containers.name}}
-        image: {{ .Values.containers.image}}
+      - name: {{ .Values.deploy.containers.name}}
+        image: {{ .Values.deploy.containers.image}}
         resources:
         ports:
-        - containerPort: {{ .Values.containers.ports.containerPort}}
+        - containerPort: {{ .Values.deploy.containers.ports.containerPort}}
         envFrom:
         - configMapRef:
-           name: {{ .Values.configMapRef.name}}
+           name: {{ .Values.deploy.configMapRef.name}}
