--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: python-env-vars
+  name: {{ .Values.deploy.configMapRef.name}}
 data:
 {{- with .Values.configMap.data }}
-    ENVIRONMENT: {{ .ENVIRONMENT }}
-    HOST: {{ .HOST }}
-    PORT: {{ .PORT }}
+    ENVIRONMENT: {{ .ENVIRONMENT | quote }}
+    HOST: {{ .HOST | quote }}
+    PORT:  {{ .PORT | quote }}
     REDIS_HOST: {{ .REDIS_HOST }}
-    REDIS_PORT: {{ .REDIS_PORT }}
-    REDIS_DB: {{ .REDIS_DB }}
+    REDIS_PORT: {{ .REDIS_PORT | quote  }}
+    REDIS_DB: {{ .REDIS_DB | quote }}
 {{- end }}
