--- a/values.yaml
+++ b/values.yaml
@@ -24,12 +24,12 @@ deploy:
 
 configMap:
   data:
-      ENVIRONMENT: DEV
-      HOST: localhost
-      PORT: 8000
-      REDIS_HOST: localhost
-      REDIS_PORT: 6379
-      REDIS_DB: 0
+      ENVIRONMENT: 'DEV'
+      HOST: '10.52.0.200'
+      PORT: '8000'
+      REDIS_HOST: '10.52.3.57'
+      REDIS_PORT: "6379"
+      REDIS_DB: "0"
 
 
 Service:
@@ -39,3 +39,6 @@ Service:
       port: 8000
       targetPort: 8000
       protocol: TCP
+      
+      
+      
